# position-based-fluids

./: .gitignore  CMakeLists.txt  Obfuscate.bat  SwapSet.txt
assets/kernels/: Scene_equ.txt  apply_viscosity.cl  apply_viscosity.cms  apply_vorticity.cl  apply_vorticity.cms  build_friends_list.cl  build_friends_list.cms  compute_delta.cl  compute_delta.cms  compute_keys.cms  compute_scaling.cl  compute_scaling.cms  empty.cms  header.cms  hesp.hpp  histogram.cms  pack_data.cl  pack_data.cms  parameters.hpp  pastehistograms.cms  predict_positions.cl  predict_positions.cms  radixsort.cl  reorder.cms  reset_grid.cl  reset_grid.cms  scanhistograms1.cms  scanhistograms2.cms  sort_particles.cms  update_cells.cl  update_cells.cms  update_predicted.cl  update_predicted.cms  update_velocities.cl  update_velocities.cms  utilities.cl  utils.cms
assets/objects/: Scene.skp
assets/scenarios/: dam_coarse.par
assets/shaders/: __fluid_depth_smoothing.fs  _fluid_depth_smoothing.fs  fluid_depth_smoothing - Copy.fs  fluid_depth_smoothing.fs  fluid_final_render.fs  grid_build.cms  grid_reset.cms  particles.vs  particles_color.fs  standard.vs  standard_copy.fs  standard_mesh.fs
docs/: README.md
docs/paper/: document.tex  references.bib
docs/template/: v2-acmtog-sample.tex  v2-readme.txt
lib/: CMakeLists.txt
lib/AntTweakBar/src/: LoadOGLCore.cpp  LoadOGLCore.h  TwMgr.cpp
src/: CMakeLists.txt  DataLoader.cpp  DataLoader.hpp  OCLPerfMon.cpp  OCLPerfMon.h  OCL_Logger.cpp  OCL_Logger.h  OGL_RenderStageInspector.cpp  OGL_RenderStageInspector.h  OGL_Utils.cpp  OGL_Utils.h  ParamUtils.cpp  ParamUtils.hpp  Parameters.hpp  Precomp_OpenGL.h  Resources.cpp  Resources.hpp  Runner.cpp  Runner.hpp  Simulation.cpp  Simulation.hpp  UIManager.cpp  UIManager.h  ZPR.cpp  ZPR.h  hesp.hpp  main.cpp
src/io/: CMakeLists.txt  Parameters.cpp  Parameters.hpp
src/kernels/: apply_viscosity.cl  apply_vorticity.cl  apply_vorticity_and_viscosity.cl  build_friends_list.cl  calc_hash.cl  compute_delta.cl  compute_scaling.cl  init_cells_old.cl  logging.cl  pack_data.cl  predict_positions.cl  radixsort.cl  reset_grid.cl  reset_part_list.cl  sort.cl  update_cells.cl  update_positions.cl  update_velocities.cl  utilities.cl
src/ocl/: CMakeLists.txt  OCLUtils.cpp  OCLUtils.hpp  TwFonts.cpp  TwOpenGLCore.cpp  TwOpenGLCore.h  cl.hpp
src/shaders/: fluid_depth_smoothing.fs  fluid_final_render.fs  grid_build.cms  grid_chain_reset.cms  particlefragment.glsl  particles.vs  particles_color.fs  particlevertex.glsl  pf.glsl  pv.glsl  sortingfragment.glsl  sortingvertex.glsl  standard.vs  standard_color.fs  standard_copy.fs  vis_scan.cms
src/visual/: CMakeLists.txt  visual.cpp  visual.hpp
tools/: zorder  zorder.cpp  zorder.py
tools/ProcessForcePlanes/: ProcessForcePlanes.sln
tools/ProcessForcePlanes/ProcessForcePlanes/: ObjLoader.cs  ProcessForcePlanes.csproj  Program.cs  Utils.cs
tools/ProcessForcePlanes/ProcessForcePlanes/3DCore/: ColorF.cs  ComplexD.cs  ComplexDArrayList.cs  ComplexF.cs  ComplexFArrayList.cs  DoubleArrayList.cs  FloatArrayList.cs  IntArrayList.cs  Interval.cs  MathFunctions.cs  Matrix2D.cs  Matrix2F.cs  Matrix3D.cs  Matrix3F.cs  Matrix4D.cs  Matrix4F.cs  MatrixD.cs  MatrixF.cs  ParseException.cs  QuaternionD.cs  QuaternionDArrayList.cs  QuaternionF.cs  QuaternionFArrayList.cs  QuaternionNotInvertibleException.cs  Sharp3DMathException.cs  Vector2D.cs  Vector2F.cs  Vector3D.cs  Vector3F.cs  Vector4D.cs  Vector4F.cs  VectorArrayLists.cs
tools/ProcessForcePlanes/ProcessForcePlanes/Properties/: AssemblyInfo.cs
tools/SourceMinifier/: SourceMinifier.sln
tools/SourceMinifier/SourceMinifier/: Program.cs  SourceMinifier.csproj
tools/SourceMinifier/SourceMinifier/Properties/: AssemblyInfo.cs
tools/performance/: performance.html
tools/performance/css/: style.css
